...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tv_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Story Page"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
...
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Logout"
...
